[metadata]
name = python-MotionMount
version = 1.0.1
author = Remco Poelstra
author_email = r.poelstra@vogels.com
description = Control your MotionMount Signature TVM7675 Pro using Python
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/vogelsproducts/python-MotionMount
project_urls =
    Bug Tracker = https://github.com/vogelsproducts/python-MotionMount/issues
    repository = https://github.com/vogelsproducts/python-MotionMount
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = src

[options.package_data]
motionmount = py.typed
